--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp
+  name: my-python-app
 spec:
   selector:
-    app: myapp
+    app: my-python-app
   ports:
     - protocol: TCP
       port: 80
